Update project references to StreaksForYnab
Changed all references from YNABAddOns to StreaksForYnab in LICENSE, README.md, _config.yml, and package.json to reflect the new project or organization name.

--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ plugins:
 theme: minima
 minima:
   social_links:
-    github: YNABAddOns
+    github: StreaksForYnab
 
 # Collections
 collections:
